--- a/要求仕様書.md
+++ b/要求仕様書.md
@@ -1,10 +1,11 @@
 # システムの目的
-：Zoomを用いたオンラインMTにおいて、OBSを使用した発表時間のタイマー管理を脱却したい
+## Zoomを用いたオンラインMTにおいて、OBSを使用した発表時間のタイマー管理を脱却したい
 
-クライアントはミーティングの際に発表者に発表時間を守らせるためタイムキーパーを設置し時間の管理を行っている．
-現状タイムキーパー役はタイマーアプリを起動し，zoomの画面共有機能を用いずにタイマーを発表者の内容を聞きながらスタートストップの操作を行う必要があるため手間である．またタイムキーパーが管理するストップウォッチをzoomカメラを用いて表示していたが，発表者が発表中にタイマー画面を確認することは難しいため残り時間の告知が必要とされるが，タイムキーパーが発表中に声をだして割り込むことには抵抗がある．
+- クライアントはミーティングの際に発表者に発表時間を守らせるためタイムキーパーを設置し時間の管理を行っている．
+- 現状タイムキーパー役はタイマーアプリを起動し，zoomの画面共有機能を用いずにタイマーを発表者の内容を聞きながらスタートストップの操作を行う必要があるため手間である．
+- またタイムキーパーが管理するストップウォッチをzoomカメラを用いて表示していたが，発表者が発表中にタイマー画面を確認することは難しいため残り時間の告知が必要とされるが，タイムキーパーが発表中に声をだして割り込むことには抵抗がある．
 
-MTメンバーが一つのタイマーを共有で操作できるwebアプリを実装し発表者がスタートストップの操作を行うことで，タイムキーパーが発表内容に合わせてタイマーを操作する手間を解消するとともに，残り時間の通知機能を実装することで発表者が残り時間を把握しやすくなる．
+- MTメンバーが一つのタイマーを共有で操作できるwebアプリを実装し発表者がスタートストップの操作を行うことで，タイムキーパーが発表内容に合わせてタイマーを操作する手間を解消するとともに，残り時間の通知機能を実装することで発表者が残り時間を把握しやすくなる．
 
 # 要求するシステムの概要．
 ブラウザ上で実行できるタイマーアプリ。
