--- a/要求仕様書.md
+++ b/要求仕様書.md
@@ -7,13 +7,16 @@
 
 - MTメンバーが一つのタイマーを共有で操作できるwebアプリを実装し発表者がスタートストップの操作を行うことで，タイムキーパーが発表内容に合わせてタイマーを操作する手間を解消するとともに，残り時間の通知機能を実装することで発表者が残り時間を把握しやすくなる．
 
-# 要求するシステムの概要．
+# 要求するシステムの概要
 ブラウザ上で実行できるタイマーアプリ。
 タイマーの進捗はwebアプリにアクセスした全員で同期されており、全員が確認可能である。
 自分の発表順が回ってきたら、ブラウザ上で自らタイマーをスタートさせる。
 持ち時間が終了したら、音などを出して既定の時間内で発表を終了させるように促す。
 終了時は発表者がタイマーをストップし、リセットする。そして次の人に順番を渡す。
 発表時間や発表の順番は適宜カスタマイズ可能。
+
+![before](./before.png)
+![after](./after.png)
 
 # 要求機能一覧
 (1)タイマ機能
