--- a/要求仕様書.md
+++ b/要求仕様書.md
@@ -15,7 +15,15 @@
 終了時は発表者がタイマーをストップし、リセットする。そして次の人に順番を渡す。
 発表時間や発表の順番は適宜カスタマイズ可能。
 
+## 現状
+- タイマー係がタイマーを操作
+- OBSを用いて共有するため，操作が複雑＆処理が重くなる
+- タイマー係が声を発して終了を知らせる必要がある
 ![before](./before.png)
+
+## システム導入後
+- タイマー係が必要なくなる
+- 各自のブラウザから発表時間の終了を知らせる鳴る
 ![after](./after.png)
 
 # 要求機能一覧
@@ -30,9 +38,9 @@
 制限時間が近づいたタイミングは任意で設定可能（30秒前，10秒前など）．
 
 # 稼働開始時期
-： 
+- 2Q終了時
 # 想定予算
-： 
+
 # 調整が必要な関連部署
-： ミーティング参加メンバーは共有タイマーにアクセスし、自身の発表前後に操作を行う。
+- ミーティング参加メンバーは共有タイマーにアクセスし、自身の発表前後に操作を行う必要がある
 
