--- a/project-name/要求仕様書.md
+++ b/project-name/要求仕様書.md
@@ -26,12 +26,12 @@ MTメンバーが一つのタイマーを共有で操作できるwebアプリを
 - タイマー係がタイマーを操作
 - OBSを用いて共有するため，操作が複雑＆処理が重くなる
 - タイマー係が声を発して終了を知らせる必要がある
-![before](./image/before.png)
+![before](../image/before.png)
 
 ## システム導入後
 - タイマー係が必要なくなる
 - 各自のブラウザから発表時間の終了を知らせる
-![after](./image/after.png)
+![after](../image/after.png)
 
 # 要求機能一覧
 ## (1)タイマ機能
