--- a/minutes/0725議事録.md
+++ b/minutes/0725議事録.md
@@ -1,17 +1,17 @@
 
 
 # 実装範囲について
-ユースケースの5.7.8
-最低限のタイマー機能
+-ユースケースの5.7.8
+-最低限のタイマー機能
 
 # 役割分担について
-総合監督：寺川くん
-バウンダリ：竹上くん
-コントローラ:大橋
-サービス・リポジトリ：岩橋くん
+-総合監督：寺川くん
+-バウンダリ：竹上くん
+-コントローラ:大橋
+-サービス・リポジトリ：岩橋くん
 
 
 # メモ
-最終課題提出は8/12
-最低限の同時刻共有ができるように（真ん中の時計が動いていてほしい）
-Webソケットで値の反映を毎秒行いたい
+-最終課題提出は8/12
+-最低限の同時刻共有ができるように（真ん中の時計が動いていてほしい）
+-Webソケットで値の反映を毎秒行いたい
